--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- navigation -->
   <header>
     <h1>
+        <!-- a href ="/" will take you to the deault documnet in the root of your site - commonly called your home page!-->
       <a href="/">
         RUN BUDDY
       </a>
@@ -69,14 +70,39 @@
   </section>
 
   <!-- "what we do" section -->
-  <section>
+    <section id="what-we-do">
     <h2>What We Do</h2>
-  </section>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores dolorem dolore. Quisquam, ab! Impedit, cumque assumenda. Culpa expedita, sequi officia, illo assumenda ratione eos distinctio fugiat dolorem odio facere.</p>
+    </section>
 
   <!-- "what you do" section -->
-  <section>
+    <section id="what-you-do">
     <h2>What You Do</h2>
-  </section>
+
+    <div>
+        <img src="./assets/images/step-1.svg" alt="" />
+        <h3>Step 1：Fill Out The Form Above.</h3>
+        <p>You're already here, so why not?</p>
+    </div>
+
+    <div>
+        <img src="./assets/images/step-2.svg" alt="" />
+        <h3>Step 2: Consult with One of Our Trainers.</h3>
+        <p>Are you here to build muscle, lose weight, or just feel good></p>
+    </div>
+
+    <div>
+        <img src="./assets/images/step-3.svg" alt="" />
+        <h3>Step 3: Get Running</h3>
+        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+    </div>
+
+    <div>
+        <img src="./assets/images/step-4.svg" alt="" />
+        <h3>Step 4: See Results.</h3>
+        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+    </div>
+    </section>
 
   <!-- "meet the trainers" section -->
   <section>
