--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </section>
 
   <!-- "what we do" section -->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
     <h2>What We Do</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores dolorem dolore. Quisquam, ab! Impedit, cumque assumenda. Culpa expedita, sequi officia, illo assumenda ratione eos distinctio fugiat dolorem odio facere.</p>
     </section>
