--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 
   <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-    <h2 class="section-title primary-border">What We Do</h2>
+    <h2 class="section-title primary-border">
+      What We Do
+    </h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores dolorem dolore. Quisquam, ab! Impedit, cumque assumenda. Culpa expedita, sequi officia, illo assumenda ratione eos distinctio fugiat dolorem odio facere.</p>
     </section>
 
@@ -105,8 +107,43 @@
     </section>
 
   <!-- "meet the trainers" section -->
-  <section>
-    <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">
+      Meet The Trainers
+    </h2>
+    <!--first trainer bio-->
+    <article class="trainer">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quasi incidunt. Tempore officia quasi cumque odit rem qui fuga, dolor quod quos distinctio quibusdam dolores, praesentium aperiam eius consequuntur ipsa.
+        </p>
+      </div>
+    </article>
+    <!--second trainer bio-->
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quasi incidunt. Tempore officia quasi cumque odit rem qui fuga, dolor quod quos distinctio quibusdam dolores, praesentium aperiam eius consequuntur ipsa.
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna gill colling off after a workout" />
+    </article>
+    <!--third trainer bio-->
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a white headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quasi incidunt. Tempore officia quasi cumque odit rem qui fuga, dolor quod quos distinctio quibusdam dolores, praesentium aperiam eius consequuntur ipsa.
+        </p>
+      </div>
+    </article>
   </section>
 
   <!-- "reach out" section -->
