--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- navigation -->
   <header>
     <h1>
-        <!-- a href ="/" will take you to the deault documnet in the root of your site - commonly called your home page!-->
+        <!-- a href ="/" will take you to the default document in the root of your site - commonly called your home page!-->
       <a href="/">
         RUN BUDDY
       </a>
@@ -90,7 +90,7 @@
     <div>
         <img src="./assets/images/step-2.svg" alt="" />
         <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-        <p>Are you here to build muscle, lose weight, or just feel good></p>
+        <p>Are you here to build muscle, lose weight, or just feel good</p>
     </div>
 
     <div>
