--- a/index.html
+++ b/index.html
@@ -77,10 +77,16 @@
 
   <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-    <h2 class="section-title primary-border">
-      What We Do
-    </h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt asperiores dolorem dolore. Quisquam, ab! Impedit, cumque assumenda. Culpa expedita, sequi officia, illo assumenda ratione eos distinctio fugiat dolorem odio facere.</p>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">
+          What We Do
+        </h2>
+      </div>
+      <div class="flex-row">
+        <p>
+          butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+        </p>
+      </div>
     </section>
 
   <!-- "what you do" section -->
